# mda_course

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
conf/base/: catalog.yml  parameters.yml
data/01_raw/: GDP_data.csv
notebooks/: features_analysis.ipynb  filtering_merging.ipynb
results/: country_scores.json  project_keyphrases.json
src/mda/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/mda/pipelines/data_preprocessing/: nodes.py  pipeline.py
src/mda/pipelines/data_processing/: nodes.py  pipeline.py
src/mda/pipelines/feature_selection/: nodes.py  pipeline.py
src/mda/pipelines/future_projections/: nodes.py  pipeline.py
src/mda/pipelines/text_analysis/: nodes.py  pipeline.py
